--- a/Makefile.hyphen
+++ b/Makefile.hyphen
@@ -1,17 +1,15 @@
 HOST=arm-linux-androideabi
 SOURCE_DIR=hyphen-2.7.1
-DEST_DIR=$(shell pwd)/build
+DEST_DIR=$(shell pwd)/out
 PKG_CONFIG_PATH=$(DEST_DIR)/lib/pkgconfig
 
-all: configure  build install
+all: configure build install
 
 configure:
 	cd $(SOURCE_DIR); PKG_CONFIG_PATH=$(PKG_CONFIG_PATH) ./configure --host=$(HOST) --prefix=$(DEST_DIR)
 
 build:
-	cp hyph_en_US.dic ..
 	cd $(SOURCE_DIR); make
-	mv ../hyph_en_US.dic .
 
 install:
 	cd $(SOURCE_DIR); make install
